--- a/project-02/style.css
+++ b/project-02/style.css
@@ -96,7 +96,7 @@ h2 {
 .screen {
   width: 100%;
   height: 70px;
-  background-color: #ffffff;
+  background-color: #fff;
   margin: 20px 0;
   box-shadow: 0 3px 12px rgba(255, 255, 255, 0.7);
   transform: rotateX(-45deg);
