--- a/project-06_Modal_Menu_Slider/style.css
+++ b/project-06_Modal_Menu_Slider/style.css
@@ -17,6 +17,11 @@ body {
   margin: 0;
 }
 
+body.show-nav {
+  /* Width of nav */
+  transform: translateX(200px);
+}
+
 nav {
   background-color: var(--primary-color);
   border-right: 2px solid var(--border-color);
@@ -77,7 +82,7 @@ header h1 {
   margin: 0;
 }
 
-header p {
+.header p {
   margin: 30px 0;
 }
 
@@ -147,8 +152,14 @@ button:focus {
   padding: 15px;
 }
 
-h3 {
+.modal-header h3 {
   margin: 0;
+}
+
+.modal p {
+  margin-bottom: 10px;
+  font-size: 18px;
+  text-align: center;
 }
 
 .modal-content {
@@ -183,4 +194,13 @@ h3 {
   width: 100%;
   text-align: center;
   font-size: 16px;
+}
+
+@keyframes modal-opener {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
