--- a/project-06_Modal_Menu_Slider/style.css
+++ b/project-06_Modal_Menu_Slider/style.css
@@ -15,6 +15,7 @@
 body {
   font-family: "Lato", sans-serif;
   margin: 0;
+  transition: transform 0.3s ease-out;
 }
 
 body.show-nav {
@@ -121,7 +122,7 @@ button:focus {
 
 .modal-container {
   background-color: rgba(0, 0, 0, 0.3);
-  /* display: none; */
+  display: none;
   position: fixed;
   top: 0;
   bottom: 0;
