--- a/project-06_Modal_Menu_Slider/style.css
+++ b/project-06_Modal_Menu_Slider/style.css
@@ -205,3 +205,104 @@ button:focus {
     opacity: 1;
   }
 }
+
+/* form css */
+
+:root {
+  --success-color: #2ecc71;
+  --error-color: #e74c3c;
+}
+
+* {
+  box-sizing: border-box;
+}
+/* 
+body {
+  background-color: #f9fafb;
+  font-family: "Lato", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+} */
+
+.form-container {
+  background-color: var(--tertiary-color);
+  border-radius: 5px;
+  width: 100%;
+  /* box-shadow: 0 2px 10px rgba(0, 0, 0.175); */
+}
+
+h2 {
+  text-align: center;
+  margin: 0 0 20px;
+}
+
+.form {
+  /* padding: 20px 40px; */
+}
+
+.form-control {
+  position: relative;
+  margin: 10px;
+  padding-bottom: 20px;
+}
+
+.form-control label {
+  display: block;
+  color: #777;
+  margin-bottom: 5px;
+}
+
+.form-control input {
+  display: block;
+  width: 100%;
+  font-size: 14px;
+  padding: 10px;
+  border-radius: 4px;
+}
+
+.form-control input:focus {
+  outline: 0;
+  border-color: #777;
+}
+
+.form-control.success input {
+  border-color: var(--success-color);
+}
+
+.form-control.error input {
+  border-color: var(--error-color);
+}
+
+.form-control small {
+  color: var(--error-color);
+  position: absolute;
+  bottom: 0;
+  left: 10;
+  visibility: hidden;
+}
+
+.form-control.error small {
+  visibility: visible;
+}
+
+.form-control.success small {
+  visibility: visible;
+  color: var(--success-color);
+}
+
+.form button {
+  outline: 0;
+  cursor: pointer;
+  background-color: #3498db;
+  border: 2px solid #3498db;
+  border-radius: 4px;
+  color: #fff;
+  display: block;
+  width: 100%;
+  margin-top: 20px;
+  font-size: 16px;
+  padding: 10px;
+}
