--- a/project-07_hangman_game/style.css
+++ b/project-07_hangman_game/style.css
@@ -40,7 +40,8 @@ p {
   display: none;
 }
 
-.wrong-letters-container {
+.wrong-letters {
+  display: none;
   position: absolute;
   top: 20px;
   right: 20px;
@@ -110,5 +111,8 @@ p {
   padding: 10px;
   border-radius: 15px 15px 0 0;
   transition: transform 0.3s ease-in-out;
+}
+
+.notification.show {
   transform: translateY(-50px);
 }
