--- a/project-08_Meal_finder/style.css
+++ b/project-08_Meal_finder/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
-* {
+*, *::before, *::after {
     box-sizing: border-box;
 }
 
@@ -11,7 +11,7 @@ body {
 }
 
 h1 {
-    font-size: 36px;
+    font-size: 2rem;
     font-weight: bold;
     margin: 10px 0;
 }
@@ -31,20 +31,25 @@ p {
 }
 
 a {
-    text-decoration: none;
-    color: #fff;
+    text-decoration: none;  
 }
 nav {
     display: inline-block;
-    width: 100%;
-    position: absolute;
+    /* width: 100%; */
+    position: relative;
     justify-content: space-between;
-    padding: 0 20px;
 }
 nav .navigation {
     width: 100%;
+    position: fixed;
     display: flex;
+    background-color: rgba(216, 216, 216, 0.2);
+    position: absolute;
     justify-content: space-between;
+    margin: 0;
+    padding: 0 10px;
+    z-index: 10;
+
 
 }
 nav .navigation li {
@@ -54,35 +59,49 @@ nav .navigation li {
 nav .buttons {
     display: flex;
     justify-content: space-between;
+    z-index: 1;
 }
 nav .buttons li{
-    margin: 10px;
+    margin: 0 15px;
     color: #fff;
 }
+nav .buttons li a {
+    text-decoration: none;
+    color: #fff;
+}
+
 nav .navigation .logo li a h1{
     color: #000;
-    font-size: 62px;
+    font-size: 3rem;
+    margin: 0 15px;
 }
 
 nav .navigation .logo li a h1 .yellow{
     color: #FFE600;
-    font-size: 62px;
+    font-size: 3rem;
 }
 
 
 .container{
     display: flex;
+    flex-wrap: wrap-reverse;
     justify-content: space-around;
-}
-
-.container .container2 .image img {
-    width: 730px;
-    height: 876px;
+    width: 100%;
 }
 
 .container .content {
     margin: 120px 20px 0 20px;
+    width: 50vw;
 
+}
+.container .container2 {
+    position: relative;
+    width: 45vw;
+}
+
+.container .container2 .image img {
+    width: 100%;
+    /* height: 876px; */
 }
 
 
@@ -101,3 +120,67 @@ nav .navigation .logo li a h1 .yellow{
     padding: 5px 10px;
     margin-right:5px;
 } 
+
+.search-container {
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    top: 170px;
+}
+
+.container .container2 .search-bar {
+    display: flex;
+    justify-content: space-between;
+    /* width: calc(100% - 200px); */
+    width: 70% ;
+    height: 65px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 50px;
+    padding: 10px 20px;
+    margin: 0 0 25px 50px;
+}
+
+.container .container2 .search-bar input {
+
+    background-color: rgba(255, 255, 255, 0);
+    /* background-color: rgb(233, 18, 18); */
+    width: 25vw;
+    height: 50px;
+    padding: 10px;
+    margin: 0;
+    border: none;
+    font-size: 24px;
+    color: rgb(107, 107, 107);
+    outline: none;
+}
+.container .container2 .search-bar span{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-left: 2px solid rgb(107, 107, 107) ;
+    padding: 0 10px;
+    margin: 0;
+}
+
+.container .container2 .search-bar span a{
+    color: rgb(107, 107, 107);
+    padding: 0 5px;
+}
+
+.container .container2 .random span a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 56px;
+    height: 64px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 20px;
+    padding: 10px 10px;
+    color: rgb(107, 107, 107);
+    margin: 0 0 25px 50px;
+}
+
+@media only screen and (max-width: 1024px) {
+    
+}
