--- a/project-08_Meal_finder/style.css
+++ b/project-08_Meal_finder/style.css
@@ -33,6 +33,10 @@ p {
 a {
     text-decoration: none;  
 }
+
+nav.hamburger {
+    display: none;
+}
 nav {
     display: inline-block;
     /* width: 100%; */
@@ -131,22 +135,21 @@ nav .navigation .logo li a h1 .yellow{
 .container .container2 .search-bar {
     display: flex;
     justify-content: space-between;
-    /* width: calc(100% - 200px); */
     width: 70% ;
-    height: 65px;
+    height: 3.25em;
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 50px;
-    padding: 10px 20px;
-    margin: 0 0 25px 50px;
+    padding: 0.5em 1em;
+    margin: 0 0 1.5em 1em;
 }
 
 .container .container2 .search-bar input {
 
     background-color: rgba(255, 255, 255, 0);
     /* background-color: rgb(233, 18, 18); */
-    width: 25vw;
-    height: 50px;
-    padding: 10px;
+    width: 20vh;
+    height: 1.5em;
+    padding: 0.25em;
     margin: 0;
     border: none;
     font-size: 24px;
@@ -166,21 +169,70 @@ nav .navigation .logo li a h1 .yellow{
 .container .container2 .search-bar span a{
     color: rgb(107, 107, 107);
     padding: 0 5px;
+    background-repeat: no-repeat;
 }
 
 .container .container2 .random span a{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 56px;
-    height: 64px;
+    /* width: 0.5em; */
+    /* height: 64px; */
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 20px;
     padding: 10px 10px;
     color: rgb(107, 107, 107);
-    margin: 0 0 25px 50px;
+    margin: 0 0.375em 1.5em 0em;
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1150px) {
+    .container .container2 .search-bar {
+        width: 75%;
+    }
+
+    .search-container {
+        justify-content: center;
+    }
     
+}
+
+@media only screen and (max-width: 800px) {
+    .container .content{
+        width: 100vw;
+        margin: 0 20px;
+    }
+    .container .content{
+        justify-content: center;
+        text-align: center;
+    }
+    .container .content .ingredients h2{
+        margin: 10px;
+    }
+    .container .content .ingredients .tags {
+        justify-content: center;
+    }
+    .container .container2 {
+        width: 100vw;
+    }
+    .search-container {
+        width: 100%;
+        padding: 0 5%;
+    }
+}
+
+@media only screen and (max-width: 600px){
+    nav {
+        display: none;
+    }
+    nav.hamburger {
+        display: flex;
+        position: fixed;
+        z-index: 10;
+        top: 15px;
+        right: 15px;
+    }
+    .container .container2 .search-container {
+        justify-content: space-between;
+        width: 100%;
+    }
 }
