--- a/project-08_Meal_finder/style.css
+++ b/project-08_Meal_finder/style.css
@@ -23,6 +23,12 @@ h2 {
     margin: 0 0 5px 0;
 }
 
+h3 {
+    color: #fff;
+    font-size: 1.5em;
+    margin: 0;
+    padding: 0;
+}
 p {
     font-size: 24px;
     text-align: justify;
@@ -84,6 +90,15 @@ nav .navigation .logo li a h1 .yellow{
     color: #FFE600;
     font-size: 3rem;
 }
+button {
+    cursor: pointer;
+    background-repeat: no-repeat;
+    border: none;
+    /* overflow: hidden; */
+    outline: none;
+    background-color: transparent;
+
+}
 
 
 .container{
@@ -104,8 +119,31 @@ nav .navigation .logo li a h1 .yellow{
 }
 
 .container .container2 .image img {
+    display: flex;
+    justify-content: center;
     width: 100%;
     /* height: 876px; */
+}
+
+.container .container2 .image .searchImg {
+    /* display: flex; */
+    /* flex-wrap: wrap; */
+    overflow: auto;
+    width: 100%;
+    height: 50%;
+    justify-content: center;
+    text-align: center;
+    position: absolute;
+    top: 300px;
+    padding: 1.5em;
+    /* background-color: #FFE600; */
+}
+
+.container .container2 .image .searchImg img{
+    width: 25%;
+    margin: 1em;
+    border: 2px solid #ddd;
+    box-shadow: 3px 5px 10px #000;
 }
 
 
@@ -126,28 +164,38 @@ nav .navigation .logo li a h1 .yellow{
 } 
 
 .search-container {
+    width: 100%;
     display: flex;
+    justify-content: space-around;
     flex-wrap: wrap;
     position: absolute;
     top: 170px;
 }
 
 .container .container2 .search-bar {
-    display: flex;
+    /* display: flex; */
     justify-content: space-between;
-    width: 70% ;
+    width: 80% ;
     height: 3.25em;
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 50px;
-    padding: 0.5em 1em;
+    padding: 0.5em;
     margin: 0 0 1.5em 1em;
 }
 
-.container .container2 .search-bar input {
+.container .container2 .search-bar form {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    padding: 0 1.2em
 
-    background-color: rgba(255, 255, 255, 0);
+}
+
+.container .container2 .search-bar input {
+    
+    background-color: rgba(218, 78, 78, 0);
     /* background-color: rgb(233, 18, 18); */
-    width: 20vh;
+    width: 100%;
     height: 1.5em;
     padding: 0.25em;
     margin: 0;
@@ -156,20 +204,14 @@ nav .navigation .logo li a h1 .yellow{
     color: rgb(107, 107, 107);
     outline: none;
 }
-.container .container2 .search-bar span{
+.container .container2 .search-bar form button{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-left: 2px solid rgb(107, 107, 107) ;
-    padding: 0 10px;
+    padding: 0 1em;
     margin: 0;
-}
-
-.container .container2 .search-bar span a{
-    color: rgb(107, 107, 107);
-    padding: 0 5px;
-    background-repeat: no-repeat;
 }
 
 .container .container2 .random span a{
@@ -189,9 +231,9 @@ nav .navigation .logo li a h1 .yellow{
     .container .container2 .search-bar {
         width: 75%;
     }
-
-    .search-container {
-        justify-content: center;
+    .container .container2 .search-container {
+        justify-content: space-around;
+        width: 100%;
     }
     
 }
@@ -204,6 +246,10 @@ nav .navigation .logo li a h1 .yellow{
     .container .content{
         justify-content: center;
         text-align: center;
+    }
+    .container .container2 .search-container {
+        justify-content: space-around;
+        width: 100%;
     }
     .container .content .ingredients h2{
         margin: 10px;
@@ -232,7 +278,20 @@ nav .navigation .logo li a h1 .yellow{
         right: 15px;
     }
     .container .container2 .search-container {
-        justify-content: space-between;
+        justify-content: space-around;
         width: 100%;
+        top: 125px;
+    }
+    .container .container2 .image .searchImg {
+        top: 200px;
+    }
+    .container .container2 .image .searchImg img{
+        width: 50%;
+    }
+    .container .container2 .image img {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        /* height: 876px; */
     }
 }
