search | recipe | ingredients added to DOM dynamically

--- a/project-08_Meal_finder/style.css
+++ b/project-08_Meal_finder/style.css
@@ -126,26 +126,38 @@ button {
 }
 
 .container .container2 .image .searchImg {
-    /* display: flex; */
-    /* flex-wrap: wrap; */
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     overflow: auto;
     width: 100%;
-    height: 50%;
+    height: 40%;
     justify-content: center;
     text-align: center;
     position: absolute;
     top: 300px;
-    padding: 1.5em;
+    padding: 1.5em; 
     /* background-color: #FFE600; */
 }
-
+.container .container2 .image .searchImg{
+display: grid;
+grid-template-columns: repeat(3, 20fr);
+grid-gap: 20px;
+margin-top: 20px;
+/* overflow: auto; */
+}
 .container .container2 .image .searchImg img{
-    width: 25%;
-    margin: 1em;
+    width: 100%;
+    margin: auto;
     border: 2px solid #ddd;
     box-shadow: 3px 5px 10px #000;
 }
 
+div.meals h3 {
+    font-size: 0.75em;
+}
 
 .container .content .ingredients .tags{
     display: flex;
@@ -154,13 +166,14 @@ button {
 }
 
 .container .content .ingredients .tags p {
-    width: 150;
+    /* width: 150; */
     height: 40px;
     background-color: #000;
     border-radius: 15px;
     color: #fff;
     padding: 5px 10px;
     margin-right:5px;
+    font-size: 1.5em;
 } 
 
 .search-container {
@@ -272,7 +285,7 @@ button {
     }
     nav.hamburger {
         display: flex;
-        position: fixed;
+        position: absolute;
         z-index: 10;
         top: 15px;
         right: 15px;
@@ -284,9 +297,10 @@ button {
     }
     .container .container2 .image .searchImg {
         top: 200px;
+        height: 50%;
     }
     .container .container2 .image .searchImg img{
-        width: 50%;
+        /* width: 50%; */
     }
     .container .container2 .image img {
         display: flex;
