working add transaction

--- a/project-09_Expense_tracker/style.css
+++ b/project-09_Expense_tracker/style.css
@@ -117,6 +117,14 @@ input[type='number'] {
     margin: 10px 0;
 }
 
+li.minus {
+    border-right: 3px solid #c0392b;
+}
+
+li.plus {
+    border-right: 3px solid #2ecc71;
+}
+
 .delete-btn {
     cursor: pointer;
     background-color: #e74c3c;
